# romulus

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  pch.h
Assets/: CMakeLists.txt
Assets/Shaders/: CMakeLists.txt
Assets/Shaders/GLSL/: 3DObject.vert  3DVertexLit.vert  Filtercube.vert  Flat2D.vert  HalfLambert.frag  IrradianceCube.frag  Line.vert  Skybox.frag  TexturedLit.frag  Unlit.frag  Unlit.vert
Engine/Applications/: IApplication.h  VulkanGraphicsImpl.cpp  VulkanGraphicsImpl.h
Engine/Common/Components/: Component.cpp  Component.h
Engine/Common/Components/Collision/: ColliderComponent.cpp  ColliderComponent.h  CollisionHelper.cpp  CollisionHelper.h
Engine/Common/Math/: Transform.cpp  Transform.h
Engine/Common/Objects/: Camera.cpp  Camera.h  Editor.cpp  Editor.h  Entity.cpp  Entity.h  FlyCamera.cpp  FlyCamera.h  IDebugabble.cpp  IDebugabble.h  ImGuiDebugLayer.cpp  ImGuiDebugLayer.h  ImGuiLayer.cpp  ImGuiLayer.h  SceneObject.cpp  SceneObject.h
Engine/Common/Physics/: PhysicsSystem.cpp  PhysicsSystem.h
Engine/Common/Scenes/: SandboxScene.cpp  SandboxScene.h  Scene.cpp  Scene.h
Engine/Graphics/API/Base/Common/: Color.h  Material.cpp  Material.h  MaterialBase.cpp  MaterialBase.h  MaterialManager.h  MeshAllocator.cpp  MeshAllocator.h
Engine/Graphics/API/Base/Common/Buffers/: AllocatedBuffer.cpp  AllocatedBuffer.h  AllocatedImage.h  AllocatedVertexBuffer.cpp  AllocatedVertexBuffer.h  PushConstants.h  Texture.cpp  Texture.h
Engine/Graphics/API/Base/Common/Data/: FrameData.h  GPUCameraData.h  GPUSceneData.h  Mesh.cpp  Mesh.h  PrimitiveMesh.cpp  PrimitiveMesh.h  Vertex.h
Engine/Graphics/API/Vulkan/: RomulusVulkanRenderer.cpp  RomulusVulkanRenderer.h  VulkanEngine.cpp  VulkanEngine.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanSystemStructs.h
Engine/Graphics/API/Vulkan/Common/: MaterialFactory.h  MeshObject.cpp  MeshObject.h  Primative.cpp  Primative.h
Engine/Graphics/API/Vulkan/Helpers/: BindingsHelper.h  VulkanInitialization.h
Engine/Graphics/API/Vulkan/Materials/: Cubemap.cpp  Cubemap.h  DefaultMaterial.cpp  DefaultMaterial.h
Engine/Graphics/API/Vulkan/Renderers/: LineRenderer.cpp  LineRenderer.h  MeshRenderer.cpp  MeshRenderer.h  Renderer.cpp  Renderer.h  SkyboxRenderer.cpp  SkyboxRenderer.h
Engine/Graphics/API/Vulkan/Systems/: GraphicsPipeline.cpp  GraphicsPipeline.h  GraphicsPipelineFactory.cpp  GraphicsPipelineFactory.h  IrradianceRenderSystem.h  LightingRenderSystem.cpp  LineRenderSystem.cpp  LineRenderSystem.h  PBRRenderSystem.cpp  RenderSystemBase.cpp  RenderSystemBase.h  SkyboxRenderSystem.cpp  SkyboxRenderSystem.h  UnlitRenderSystem.cpp  UnlitRenderSystem.h  WireframeRenderSystem.cpp
Engine/IO/: FileManagement.cpp  FileManagement.h  LoadUtilities.cpp  LoadUtilities.h
Engine/IO/ProjectExplorer/: AssetItem.h  DirectoryMonitor.cpp  DirectoryMonitor.h
Engine/System/: DequeBuffer.h  InputSystem.cpp  InputSystem.h  Logger.cpp  Logger.h  Memory.cpp  Memory.h  Profiler.cpp  Profiler.h  ScopedProfileTimer.cpp  ScopedProfileTimer.h
projects/sandbox/: CMakeLists.txt  SandboxGraphicsImpl.cpp  SandboxGraphicsImpl.h  main.cpp
src/Applications/: IApplication.h  VulkanGraphicsImpl.cpp  VulkanGraphicsImpl.h
src/Common/Components/: Component.h
src/Common/Components/Collision/: ColliderComponent.cpp
src/Common/Math/: Transform.cpp
src/Common/Objects/: Camera.cpp  FlyCamera.h  IDebuggable.h  SceneObject.h
src/Common/Physics/: Ray.h
src/Common/Scenes/: Scene.cpp  Scene.h  TemplateScene.cpp  TemplateScene.h
src/Graphics/API/Base/Common/: Color.h  Material.cpp  Material.h  MaterialBase.cpp  MaterialBase.h  MaterialManager.cpp  RendererBase.h
src/Graphics/API/Base/Common/Buffers/: AllocatedBuffer.cpp  AllocatedBuffer.h  AllocatedVertexBuffer.cpp  PushConstants.h  Texture.cpp
src/Graphics/API/Base/Common/Data/: FrameData.h  GPUSceneData.h  Mesh.cpp  Mesh.h
src/Graphics/API/Vulkan/: RomulusVulkanRenderer.h  VulkanSwapChain.h  VulkanSystemStructs.h
src/Graphics/API/Vulkan/Common/: MaterialFactory.h  MeshObject.cpp  MeshObject.h  Primative.cpp  Primative.h
src/Graphics/API/Vulkan/Materials/: Cubemap.cpp  Cubemap.h  DefaultMaterial.cpp  DefaultMaterial.h  Irradiance.cpp  Irradiance.h
src/Graphics/API/Vulkan/Renderers/: LineRenderer.h  MeshRenderer.h  Renderer.cpp
src/Graphics/API/Vulkan/Systems/: GraphicsPipeline.cpp  GraphicsPipeline.h  GraphicsPipelineFactory.cpp  GraphicsPipelineFactory.h  IrradianceRenderSystem.cpp  LightingRenderSystem.cpp  LightingRenderSystem.h  LineRenderSystem.cpp  LineRenderSystem.h  PBRRenderSystem.cpp  PBRRenderSystem.h  PipelineConfigInfo.h  SkyboxRenderSystem.cpp  UnlitRenderSystem.cpp  WireframeRenderSystem.cpp  WireframeRenderSystem.h
src/IO/: FileManagement.cpp  FileManagementInfo.h  LoadUtilities.cpp
src/IO/ProjectExplorer/: AssetParser.cpp  AssetParser.h
src/System/: InputSystem.cpp  Memory.cpp  Memory.h
src/System/Types/: DequeBuffer.h
